--- a/myPlanner/app/src/main/res/values/strings.xml
+++ b/myPlanner/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_chat_head_service">ChatHeadService</string>
     <string name="title_activity_chat">ChatActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
